main functionality of extension

--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tiggtle</title>
-    <style>
-        button {
-            height: 30px;
-            width: 30px;
-            outline: none;
-        }
-    </style>
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-    <button id="changeColor"></button>
+<div>
+    Selectors:
+    <textarea class="text-field" id="selectors"></textarea>
+</div>
+<div>
+    Words:
+    <textarea class="text-field" id="words"></textarea>
+</div>
+<script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
