--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
     Words:
     <textarea class="text-field" id="words"></textarea>
 </div>
+<button id="saveButton" class="button">Save</button>
 <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
